Remove Guava's collections from `phenol-analysis`